hphp/hack/test/typecheck/re_prefixed_string/re_prefixed_string.php.exp
File "re_prefixed_string.php", line 18, characters 16-17:
Invalid argument (Typing[4110])
  File "re_prefixed_string.php", line 21, characters 43-65:
  This is an object of type HH\Lib\Regex\Pattern
  File "re_prefixed_string.php", line 15, characters 8-20:
  It is incompatible with a string because this is the result of a concatenation
File "re_prefixed_string.php", line 28, characters 13-33:
Bad regex pattern; two named subpatterns have the same name [14]. (Typing[4275])
File "re_prefixed_string.php", line 29, characters 13-27:
Bad regex pattern; group name must start with a non-digit [5]. (Typing[4275])
File "re_prefixed_string.php", line 30, characters 13-16:
Bad regex pattern; \c at end of pattern [2]. (Typing[4275])
File "re_prefixed_string.php", line 37, characters 16-33:
Strings with embedded expressions are not allowed to be to be `re`-prefixed (Typing[4274])
